--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,12 @@
 sphinx==7.1.2
 sphinx-rtd-theme==1.3.0rc1
+docutils >= 0.15, != 0.18.*, != 0.19.*
+jupyter-book
+matplotlib
+numpy
+sphinx_exercise
+sphinx_proof
+
+
+
+
